[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytes="1"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = {git="https://github.com/hyperium/hyper-util.git"}

[[example]]
name = "base"
path = "src/hello.rs"

[[example]]
name="customise_svc"
path="src/service_struct_impl.rs"
